# apex-ray

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  lefthook.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.agents/skills/apex-ray/: SKILL.md
.agents/skills/apex-ray-improve/: SKILL.md
.apex-ray/: .gitignore  config.yml
.apex-ray/rules/: agent-skill-layout.md  analyzer-context-quality.md  gate-state-safety.md  packaging-and-ci-contracts.md  privacy-and-local-artifacts.md  review-engine-contracts.md
.apex-ray/skills/apex-ray/: SKILL.md
.apex-ray/skills/apex-ray-improve/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  release-please.yml
analyzer-runtimes/go/: go.mod
analyzer-runtimes/typescript/: package-lock.json  package.json  tsconfig.json
analyzer-runtimes/typescript/src/: analyzer.ts  checker-utils.ts  cli.ts  constants.ts  package-info.ts  test-discovery.ts  types.ts  utils.ts
analyzer-runtimes/typescript/test/: analyzer.test.ts  cli.test.ts  contract-analysis.test.ts  contract-targets.test.ts  helpers.ts  module-resolution.test.ts  program.test.ts  reference-analysis.test.ts  repo-index.test.ts  workspace-export-names.test.ts  workspace-references.test.ts
analyzers/typescript/: package-lock.json  package.json  tsconfig.test.json
analyzers/typescript/src/: analyze.ts  analyzer.ts  ast-utils.ts  cli.ts  contract-analysis.ts  contract-dependencies.ts  contract-metadata.ts  contract-targets.ts  declaration-utils.ts  di-index.ts  implemented-members.ts  import-export-index.ts  import-index.ts  module-resolution.ts  program.ts  reference-analysis.ts  reference-merge.ts  reference-target-match.ts  reference-utils.ts  repo-index-cache.ts  repo-index.ts  semantic-file-index.ts  source-file-index.ts  symbol-collection.ts  symbol-export-info.ts  synthetic-array-entries.ts  synthetic-symbols.ts  utils.ts  workspace-export-names.ts  workspace-import-bindings.ts  workspace-member-receivers.ts  workspace-references.ts
analyzers/typescript/test/: analyze.test.ts  contract-analysis.test.ts  contract-dependencies.test.ts  contract-metadata.test.ts  contract-targets.test.ts  di-index.test.ts  import-export-index.test.ts  import-index.test.ts  module-resolution.test.ts  reference-analysis.test.ts  reference-merge.test.ts  reference-target-match.test.ts  repo-index-cache.test.ts  repo-index.test.ts  semantic-file-index.test.ts  source-file-index.test.ts  symbol-collection.test.ts  symbol-export-info.test.ts  synthetic-array-entries.test.ts  synthetic-symbols.test.ts  test-discovery.test.ts  workspace-export-names.test.ts  workspace-import-bindings.test.ts  workspace-member-receivers.test.ts  workspace-references.test.ts
docs/: architecture.md  configuration.md  development.md  index.md  memory.md  pr-eval.md  providers.md  quickstart.md  releasing.md  review-workflow.md  telemetry.md
scripts/: apex-ray-pre-push.sh  create-worktree.sh  setup-worktree.sh
src/apex_ray/: __init__.py  analyzers.py  benchmark.py  benchmark_capture.py  benchmark_matching.py  benchmark_reporting.py  classify.py  cli.py  cli_benchmark.py  cli_common.py  cli_eval.py  cli_memory.py  config.py  context.py  diff.py  discovery.py  findings.py  gate_retry.py  gates.py  git.py  invocation.py  line_ranges.py  llm.py  llm_cache.py  llm_cli.py  llm_errors.py  llm_providers.py  llm_responses.py  llm_usage.py  local_data.py  memory.py  models.py  pipeline.py  pipeline_findings.py  pipeline_selection.py  pr_eval.py  pr_eval_github.py  pr_eval_greptile.py  pr_eval_matching.py  pr_eval_report.py  (+10 more)
tests/: conftest.py  test_analyzers.py  test_benchmark.py  test_classify.py  test_cli.py  test_config.py  test_context.py  test_diff.py  test_discovery.py  test_gates.py  test_git.py  test_invocation.py  test_llm.py  test_local_data.py  test_memory.py  test_pipeline.py  test_pr_eval.py  test_python_analyzer_contracts.py  test_report.py  test_report_archive.py  test_rules.py  test_telemetry.py  test_triage.py  test_version.py
tests/benchmarks/: cart_bug_fake.yml  python_alembic_migration_context.yml  python_event_worker_context.yml  python_exported_function_context.yml  python_external_http_adapter_context.yml  python_fastapi_pydantic_context.yml  python_protocol_contract_context.yml  python_pytest_fixture_override_context.yml  python_sqlalchemy_transaction_context.yml  routes_context_static.yml  workspace_active_step_reversibility_context.yml  workspace_callee_contract_context.yml  workspace_class_heritage_contract_context.yml  workspace_class_level_permission_inheritance_context.yml  workspace_const_array_route_entry_context.yml  workspace_const_object_member_context.yml  workspace_constructor_injection_context.yml  workspace_decorator_argument_contract_context.yml  workspace_decorator_factory_contract_context.yml  workspace_decorator_metadata_key_consumer_context.yml  workspace_dto_property_metadata_context.yml  workspace_enum_member_permission_context.yml  workspace_factory_call_transition_entry_context.yml  workspace_flow_handler_metadata_mismatch_context.yml  workspace_flow_handler_provider_omission_context.yml  workspace_frozen_array_event_entry_context.yml  workspace_frozen_object_member_context.yml  workspace_fsm_transition_table_context.yml  workspace_handler_version_invariant_exact_context.yml  workspace_handler_version_numeric_compare_context.yml  workspace_identity_routing_multianchor_context.yml  workspace_injected_service_method_context.yml  workspace_internal_transfer_reverse_sender_contract_context.yml  workspace_log_metadata_shadow_canonical_context.yml  workspace_map_tuple_fanout_entry_context.yml  workspace_missing_method_permission_context.yml  workspace_nest_controller_metadata_context.yml  workspace_nest_imported_provider_spread_context.yml  workspace_nest_module_provider_context.yml  workspace_nest_provider_spread_context.yml  (+22 more)
tests/fixtures/: sample.diff
(+477 files in other folders)
