[project]
name = "apex-ray"
version = "0.1.10"
description = "Local CLI-first AI code review for git diffs with analyzer-backed context."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Apex Ray contributors" },
]
keywords = [
    "ai",
    "code-review",
    "code-analysis",
    "static-analysis",
    "git-diff",
    "local-first",
    "typescript",
    "javascript",
    "python",
    "go",
    "llm",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Go",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "typer>=0.26.2",
]

[project.urls]
Homepage = "https://dobrotacreator.github.io/apex-ray/"
Documentation = "https://dobrotacreator.github.io/apex-ray/"
Repository = "https://github.com/dobrotacreator/apex-ray"
Issues = "https://github.com/dobrotacreator/apex-ray/issues"
Changelog = "https://github.com/dobrotacreator/apex-ray/blob/main/CHANGELOG.md"

[project.scripts]
apex-ray = "apex_ray.cli:app"

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pyright>=1.1",
    "pytest>=8.4",
    "ruff>=0.14",
    "twine>=6.2",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"analyzer-runtimes/typescript/dist" = "apex_ray/_bundled/typescript"
"analyzer-runtimes/typescript/package.json" = "apex_ray/_bundled/typescript/package.json"
"analyzer-runtimes/typescript/package-lock.json" = "apex_ray/_bundled/typescript/package-lock.json"
"analyzer-runtimes/typescript/node_modules/typescript" = "apex_ray/_bundled/typescript/node_modules/typescript"
# CI installed-wheel smoke imports go_analyzer_runtime_dir and runs apex-ray on a Go fixture.
"analyzer-runtimes/go" = "apex_ray/_bundled/go"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/analyzer-runtimes/typescript/src",
    "/analyzer-runtimes/typescript/test",
    "/analyzer-runtimes/typescript/tsconfig.json",
    "/analyzer-runtimes/typescript/tsconfig.test.json",
    "/analyzer-runtimes/typescript/package.json",
    "/analyzer-runtimes/typescript/package-lock.json",
    # Keep Go sdist coverage in sync with the installed-wheel Go analyzer smoke.
    "/analyzer-runtimes/go/cmd",
    "/analyzer-runtimes/go/internal",
    "/analyzer-runtimes/go/go.mod",
    "/analyzer-runtimes/go/go.sum",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/pyproject.toml",
]
artifacts = [
    "/analyzer-runtimes/typescript/dist",
    "/analyzer-runtimes/typescript/node_modules/typescript",
]

[tool.coverage.run]
source = ["apex_ray"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["tests/fixtures"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src", "tests"]
extend-exclude = ["release-please-config.json"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "E501",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
